--- a/quiz.html
+++ b/quiz.html
@@ -109,7 +109,7 @@
       <!-- Visibility public section -->
       <div class="col-sm-6 chartdiv" id="updated-answers-section">
         <div id="updated_div" style="display:none;margin-left: 10%;margin-top:3%;">
-          <div style="font-weight:bold;margin-bottom:2%;">Final answers of the group to this question (your answer is highlighted)..</div>
+          <div style="font-weight:bold;margin-bottom:2%;">Final answers of the group to this question (changes highlighted in red).</div>
           <div class="row control-option-row" ng-repeat="option in updatedFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1), 'text-red' : (option.hasChanged == true)}">
             <div class="col-sm-2 option-box">
               <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-if='option.order != 1 && cues == "letter"'>
