adding usernames to the feedback

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
             You will be referred to as <img id="example_avatar" width="50"/>
           </div>
           <div class="col-sm-12 connecting-text" ng-show="user.cues == 'avatar'">
-            Successfully connected with four other users!
+            Successfully connected with four other users! <br/>
+            You will be referred to as <b>User 3</b>.
           </div>
         </div>
 
