--- a/quiz.html
+++ b/quiz.html
@@ -165,11 +165,11 @@
           <div ng-repeat="line in history" class="chat-messages" ng-class="{'last-line':$last, 'joined' : {{line.class == 'joined'}}, 'status' : {{line.class == 'status'}}}">
             <div class="row">
               <div class="col-sm-1" style="margin-left:20px;padding-right:0px;padding-left:0px;text-align:center;">
-                <img src="./assets/icons/new/{{line.avatar}}" width="45" ng-if='line.name != currentUsername && line.name != "QuizBot" && cues == "letter"' style="margin-top:7px;">
-                <img src="{{myAvatar}}" width="45" ng-if='line.name == currentUsername && cues == "letter"' style="margin-top:7px;">
-                <img src="./assets/icons/new/neutral.png" width="45" ng-if='line.name != "QuizBot" && cues == "avatar" && line.class != "joined" && line.class != "status"' style="margin-top:7px;">
+                <img src="./assets/icons/new/{{line.avatar}}" width="40" ng-if='line.name != currentUsername && line.name != "QuizBot" && cues == "letter"'>
+                <img src="{{myAvatar}}" width="40" ng-if='line.name == currentUsername && cues == "letter"'>
+                <img src="./assets/icons/new/neutral.png" width="40" ng-if='line.name != "QuizBot" && cues == "avatar" && line.class != "joined" && line.class != "status"'>
                 <img src="./assets/icons/new/{{line.avatar}}" width="40" ng-if='line.name == "QuizBot"'>
-                <b style="font-size: smaller;" ng-if='line.name && line.name == "QuizBot"'> {{line.name}}</b>
+                <b style="font-size: smaller;" ng-if='line.name'> {{line.name}}</b>
               </div>
               <div class="col-sm-10" ng-class="{'message-text' : {{line.class != 'joined' && line.class != 'status'}}, 'my-answer-text' : {{currentUsername == line.name}}}">
                 {{line.msg}}
