minor changes to the feedback area

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <tr class="row">
                 <td class="col-sm-6 right"></td>
                 <td class="col-sm-6">
-                  <input id="male" type="radio" name="user.gender" ng-model="user.gender" value="non-binary" class="radio-button"> <label for="non-binary" class="gender-label">Non-binary</label>
+                  <input id="non-binary" type="radio" name="user.gender" ng-model="user.gender" value="non-binary" class="radio-button"> <label for="non-binary" class="gender-label">Non-binary</label>
                 </td>
               </tr>
               <tr class="row">
