--- a/quiz.html
+++ b/quiz.html
@@ -80,7 +80,7 @@
               <img src="./assets/icons/new/{{option.avatar}}" width="40" ng-if='option.order != 1 && cues == "letter"'>
               <img src="./assets/icons/new/neutral.png" width="40" ng-if='option.order != 1 && cues == "avatar"'>
               <img src="{{myAvatar}}" width="40" ng-if='option.order == 1'>
-              <div style="font-size: 13px; font-weight:bold;margin-top: -4px;">{{option.username}}</div>
+              <div ng-if="cues == 'avatar'" style="font-size: 13px; font-weight:bold;margin-top: -4px;">{{option.username}}</div>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
@@ -116,7 +116,7 @@
               <img src="./assets/icons/new/{{option.avatar}}" width="40" ng-if='option.order != 1 && cues == "letter"'>
               <img src="./assets/icons/new/neutral.png" width="40" ng-if='option.order != 1 && cues == "avatar"'>
               <img src="{{myAvatar}}" width="40" ng-if='option.order == 1'>
-              <div style="font-size: 13px; font-weight:bold;margin-top: -4px;">{{option.username}}</div>
+              <div ng-if="cues == 'avatar'" style="font-size: 13px; font-weight:bold;margin-top: -4px;">{{option.username}}</div>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.newAnswer}}</div>
