--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <div class="row instruction">
           <div class="col-sm-2"><img src="./assets/1.png" width = "50"></div>
-          <div class="col-sm-10 instruction-text">Select an answer, provide your confidence and explanation.</div>
+          <div class="col-sm-10 instruction-text">Select an answer and provide your confidence.</div>
         </div>
 
         <div class="row instruction">
@@ -179,12 +179,12 @@
 
         <div class="row instruction" ng-show="user.discussion == 'Yes'">
           <div class="col-sm-2"><img src="./assets/3.svg" width = "50"></div>
-          <div class="col-sm-10 instruction-text">Discuss answers and explanations with others.</div>
+          <div class="col-sm-10 instruction-text">Discuss answers and justifications with others.</div>
         </div>
 
         <div class="row instruction" ng-show="user.discussion == 'No'">
           <div class="col-sm-2"><img src="./assets/3.svg" width = "50"></div>
-          <div class="col-sm-10 instruction-text">Update your answer, confidence or explanation if needed.</div>
+          <div class="col-sm-10 instruction-text">Update your answer and/or confidence if needed.</div>
         </div>
 
         <div class="row instruction" ng-show="user.discussion == 'No'">
@@ -194,7 +194,7 @@
 
         <div class="row instruction" ng-show="user.discussion == 'Yes'">
           <div class="col-sm-2"><img src="./assets/4.png" width = "50"></div>
-          <div class="col-sm-10 instruction-text">Update your answer, confidence or explanation if needed and submit final answer.</div>
+          <div class="col-sm-10 instruction-text">Update your answer and/or confidence if needed and submit final answer.</div>
         </div>
 
         <div class="row instruction" ng-show="user.visibility == 'No'">
