--- a/quiz.html
+++ b/quiz.html
@@ -44,7 +44,7 @@
             <div id="confidence-container">
               <div>
                 <p class="confidence-text">How confident are you of the selected answer?
-                  <br>Move the slider to denote a value <b>AND</b> provide your explanation.</p>
+                  <br>Move the slider to denote a value.</p>
               </div>
 
               <div class="slidecontainer" style="width:510px;">
@@ -55,9 +55,6 @@
               </div>
               <div class="explanation-container">
                 <form>
-                  <!-- <textarea class="explanation-box" ng-model="myAnswer.explanation" placeholder="Why do you think this answer is the correct one? Enter your explanation here..">
-                    Enter your explanation here..
-                  </textarea> -->
                   <div style="margin-top:20px;" class="button">
                     <button id="submit-button" style="display:none;" class="submit-button" ng-click="((count == 0) ? submitAnswer() : ((count == 1) ? update() : updateAndShowAnswers()))">Submit</button>
                     <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
@@ -84,14 +81,13 @@
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
-              <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
             </div>
           </div>
 
           <div id="change-section-nd" style="margin-bottom: 50px;padding: 20px;margin-top: 20px;border: solid red;display:none;">
             <div class="row">
               <div id="descr" class="col-sm-12">
-                <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
+                <p class="change-text">Would you like to make changes to your answer or confidence?</p>
               </div>
 
               <div class="col-sm-6">
@@ -120,7 +116,6 @@
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.newAnswer}}</div>
-              <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
             </div>
           </div>
 
@@ -140,7 +135,7 @@
       <div class="row">
         <div id="change-section" class="col-sm-12" style="display:none;" ng-class="{'change-area-no-discuss': (discussion == 'No'), 'change-area-discuss' : (discussion == 'Yes')}">
           <div id="descr">
-            <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
+            <p class="change-text">Would you like to make changes to your answer or confidence?</p>
           </div>
           <div class="col-sm-6">
             <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
