added aprogress bar with ticks

--- a/quiz.html
+++ b/quiz.html
@@ -101,6 +101,36 @@
         </div>
         <div id="loader" style="display: none;" class="loader"></div>
         <div id="loader-text" style="display: none;" class="loader-text">Getting answers of other participants.. Please wait.</div>
+        <div id="progress-bar" class="progress-section">
+          <div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/a.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 1</div>
+                <img id="tick-1" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/b.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 2</div>
+                <img id="tick-2" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/d.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 4</div>
+                <img id="tick-3" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/e.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 5</div>
+                <img id="tick-4" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Visibility public section -->
@@ -130,6 +160,36 @@
         </div>
         <div id="loader-updated" style="display: none;" class="loader"></div>
         <div id="loader-text-updated" style="display: none;" class="loader-text">Getting the final answers of other participants.. Please wait.</div>
+        <div id="progress-bar-updated" class="progress-section">
+          <div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/a.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 1</div>
+                <img id="tick-5" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/b.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 2</div>
+                <img id="tick-6" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/d.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 4</div>
+                <img id="tick-7" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+              <div class="col-sm-2">
+                <img src="./assets/icons/new/e.png" width="50" ng-if="cues == 'letter'"><br />
+                <img src="./assets/icons/new/neutral.png" width="50" ng-if="cues == 'avatar'"><br />
+                <div ng-if="cues == 'avatar'" style="margin-left: 10%;">User 5</div>
+                <img id="tick-8" src="./assets/icons/new/tick.png" width="30" class="tick">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="row">
