--- a/quiz.html
+++ b/quiz.html
@@ -204,6 +204,8 @@
             <input type="button" value="No, next question" class="no-button" ng-click="((visibility == 'No') ? next() : showPublicFeedback())" />
           </div>
         </div>
+        <div id="timer" class="col-sm-12 timer">
+        </div>
       </div>
 
       <!-- Change section for public conditions -->
