removed set number

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <form>
             <table style="width:100%;">
 
-              <tr class="row">
+              <!-- <tr class="row">
                 <td class="col-sm-6 right padding-adjust-labels"> Set (to be selected by the researcher):<span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 10px;">
                   <select required ng-model="user.set" class="input-text">
@@ -44,8 +44,8 @@
                     <option value="2">Set 2</option>
                   </select>
                 </td>
-              </tr>
-
+              </tr> -->
+              
               <tr class="row">
                 <td class="col-sm-6 right padding-adjust-labels"> C (to be selected by the researcher):<span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 10px;">
