--- a/big-five.html
+++ b/big-five.html
@@ -29,7 +29,7 @@
 			</div>
 			<br />
 			<div class="big-five-question-container">
-				<form id="my-form" action="https://mysterious-badlands-68636.herokuapp.com/bigFiveData" method="post">
+				<form id="my-form" action="http://localhost:5000/bigFiveData" method="post">
 					<input type="hidden" name="userId" id="userId">
 					<table>
 						<tr>
